--- a/w04-task.html
+++ b/w04-task.html
@@ -36,6 +36,7 @@
       <ul id="hobbies"></ul>
       <h2>Places Lived</h2>
       <dl id="places-lived"></dl>
+      <p class="message">Hey</p>
     </section>
   </main>
 
